--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js",
-    "develop": "nodemon src/index.js"
-  }, "repository": {
+    "start": "node index.js",
+    "develop": "nodemon index.js"
+  },
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/Reaper-Black/Proyecto_Final_U3_backend.git"
   },
   "author": "Andres Chacon",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Reaper-Black/Proyecto_Final_U3_backend/issues"
   },
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "errorhandler": "^1.5.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.1"
