fix: rename file in routes and package

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "develop": "nodemon index.js"
+    "develop": "nodemon index.js",
+    "test":"echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
