--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "develop": "nodemon index.js",
+    "dev": "nodemon index.js",
     "test":"echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
